# agentflow

./: Makefile  README.md  install.sh  pyproject.toml
agentflow/: app.py  cli.py  context.py  defaults.py  doctor.py  dsl.py  inspection.py  loader.py  local_shell.py  orchestrator.py  prepared.py  specs.py  store.py  utils.py
agentflow/agents/: base.py  claude.py  codex.py  kimi.py
agentflow/cloud/: installer.py  shared.py
agentflow/runners/: ec2.py  ecs.py
docs/: cli.md  examples.md  pipelines.md
examples/: airflow_like_fuzz_batched.py  airflow_like_fuzz_grouped.py  local-real-agents-kimi-shell-init-smoke.py  local-real-agents-kimi-shell-wrapper-smoke.py  local-real-agents-kimi-smoke.py  local-real-agents-kimi-smoke.yaml
examples/fuzz/: codex-fuzz-hierarchical-128.yaml  codex-fuzz-matrix-manifest-128.yaml  (+1 more)
scripts/: custom-local-kimi-helpers.sh  verify-bundled-local-kimi-run.sh  verify-bundled-local-kimi-smoke.sh  verify-custom-local-kimi-doctor.sh  verify-custom-local-kimi-inspect.sh  verify-custom-local-kimi-pipeline.sh  verify-custom-local-kimi-run.sh  verify-custom-local-kimi-smoke.sh  verify-local-kimi-shell.sh  verify-local-kimi-stack.sh
tests/: test_agents.py  test_api.py  test_cli.py  test_cli_auto_preflight.py  test_cli_bash_rcfile_auth.py  test_context.py  test_defaults.py  test_doctor.py  test_dsl.py  test_inspection.py  test_kimi_bridge.py  test_loader.py  test_local_shell.py  test_maintainer_scripts.py  test_orchestrator.py  test_prepared.py  test_runners.py  test_store_and_validation.py  test_success.py  test_toolchain_local.py
(+3 files in other folders)
